# mlserve

./: .dockerignore  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
scripts/: delete.py  infer.py  list_models.py  pick_model.py  register.py  sandbox.py
src/mlserve/: main.py
src/mlserve/models/: __init__.py
src/mlserve/utils/: convert.py
tests/: conftest.py  test_infer.py  test_register.py
tests/client/: conftest.py  test_client.py  test_delete.py  test_infer.py  test_register.py
tests/server/: conftest.py  test_delete.py  test_infer.py  test_register.py
tests/utils/: data.py  models.py
