[project]
name = "mlserve-workspace"
version = "0.0.0"
description = "Workspace root for mlserve monorepo"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "mlserver",
    "mlclient",
    "pytest>=8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
required-environments = ["sys_platform=='linux'"]

[tool.uv.sources]
mlserver = { workspace = true }
mlclient = { workspace = true }
torch = [{ index = "torch-cpu" }]
torchvision = [{ index = "torch-cpu" }]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning",
]
